--- a/html/login.html
+++ b/html/login.html
@@ -128,7 +128,7 @@
 						registdevice();
 						}else{
 							$.hori.hideLoading();
-							alert("登录失败:" + json.msg);
+							alert(json.msg);
 						}
 
 				},
