--- a/html/task.html
+++ b/html/task.html
@@ -30,7 +30,7 @@
 		<div data-role="content" align="center">
 			<div  id="divDataLoading">
 				<ul  data-role="listview" data-inset="true">
-					<li>数据加载中……</li>
+					<h3>数据加载中……</h3>
 				</ul>				
 			</div>
 			<div id="taskList">
