--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -77,8 +77,20 @@
                 }
             })
         }
+        var t1 = null;//这个设置为全局
         //跳转到详情页面
         function loadListDetails(aElement) {
+        	if (t1 == null){
+                t1 = new Date().getTime();
+            }else{       
+                var t2 = new Date().getTime();
+                if(t2 - t1 < 500){
+                    t1 = t2;
+                    return;
+                }else{
+                    t1 = t2;
+                }
+            }
             $.hori.showLoading();
             var docunid=$(aElement).data("docunid");
             localStorage.setItem("watchDocUnid",docunid);
