--- a/html/task.html
+++ b/html/task.html
@@ -30,7 +30,7 @@
 		<div data-role="content" align="center">
 			<div  id="divDataLoading">
 				<ul  data-role="listview" data-inset="true">
-					<h3>数据加载中……</h3>
+					<li class="ui-li-static ui-body-inherit ui-first-child ui-last-child"><h3>数据加载中……</h3></li>
 				</ul>				
 			</div>
 			<div id="taskList">
