--- a/html/guide.html
+++ b/html/guide.html
@@ -13,6 +13,8 @@
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
 <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+<script src="../lib/knockout/knockout.js"></script>
+<script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../config/web/config.js"></script>
 <style>
 a {
@@ -32,7 +34,7 @@ div p {
 			alert(e.message);
 		}
 	});
-
+var fistBind=1;
 	//查询用户信息方法
 	function doSearch() {
 		var username = $.trim($("#cn_name").val());
@@ -49,7 +51,7 @@ div p {
 		try {
 			var random = new Date().getTime();
 			var url = $.hori.getconfig().appServerHost
-					+ "view/guide/getInfo";
+					+ "view/guide/getInfo/getUserinfo/";
 			url = url + "?data-random=" + random + "&data-result=text";
 		} catch (e) {
 		}
@@ -58,12 +60,21 @@ div p {
 			"url" : url,
 			"data" : $("#guideQueryForm").serialize(),
 			"success" : function(res) {
-				console.log(res);
-				var data = JSON.parse(res);
-				if (data.rtn_code && data.rtn_code == "2000") { //判断是否正确返回 
-					//TODO
+				var jdata = JSON.parse(res);
+				if(jdata.mobile_number==""&jdata.email==""){
+					jdata.mobile_number="您暂时未绑定手机号";
+				}else{
+				jdata.mobile_number=jdata.mobile_number.substring(0,3)+"****"+jdata.mobile_number.substring(7,11);
+				}
+				var data=new Object();
+				data.list=jdata;
+				if (jdata.rtn_code && jdata.rtn_code == "2000") { //判断是否正确返回 
+					if(jdata.mobile_number==""){
+						document.getElementById("addphonenumber").style.display="block";
+					}
+					render(data);
 				} else { //未正确查询到结果
-					alert(data.rtn_msg);
+					alert(jdata.rtn_msg);
 				}
 			},
 			"error" : function(res) {
@@ -99,22 +110,29 @@ div p {
 		} catch (e) {
 		}
 		$.hori.ajax({
-			"type" : "post",
+			"type" : "get",
 			"url" : url,
 			"data" : $("#guideQueryForm").serialize(),
 			"success" : function(res) {
-				console.log(res);
 				var data = JSON.parse(res);
-				if (data.rtn_code && data.rtn_code == "2000") { //判断是否正确返回 
+				 if (data.rtn_code && data.rtn_code == "2000") { //判断是否正确返回 
+					alert("绑定成功！");
 				} else { //未正确查询到结果
 					alert(data.rtn_msg);
-				}
+				} 
 			},
 			"error" : function(res) {
 				alert("查询失败：" + res);
 				$.hori.hideLoading();
 			}
 		})
+	}
+	function render(jsonData) {
+		viewModel = ko.mapping.fromJS(jsonData);
+		if(fistBind==1){
+			fistBind=fistBind+1;
+		ko.applyBindings(viewModel,document.getElementById("guide"));
+		}
 	}
 </script>
 </head>
@@ -151,18 +169,19 @@ div p {
 						</table>
 					</li>
 				</ul>
-				</form>
+				
 			<div class="ui-grid-a" style="max-width: 400px;">
 				<a href="javascript:void(0)" onclick="doSearch();" data-theme="f"
 					data-role="button" data-icon="false">查&nbsp;询</a>
 			</div>
-			<div style="max-width: 400px; text-align: left;">
+			<div style="max-width: 400px; text-align: left;" id="guide">
 				<p>
-					您的集团统一用户账号是：ＡＡＢＢＦＤＫＦ，请使用对应的密码登陆，如无法登陆，请点击<a>忘记密码</a>重置
+					您的集团统一用户账号是：<span data-bind="text:list.user_name"></span>，请使用对应的密码登陆，如无法登陆，请点击<a>忘记密码</a>重置
 				</p>
-				<p>您当前的手机号为：189****8846</p>
+				<p>您当前的手机号为：<span data-bind="text:list.mobile_number"></span></p>
 				<p>如需更改手机号，请与本单位人力资源部联系</p>
 			</div>
+			<div id="addphonenumber" style="display:none;">
 			<ul data-role="listview" data-theme="c" data-inset="true"
 				style="max-width: 400px;">
 				<li data-role="list-divider"><a href="javascript:void(0);"
@@ -179,9 +198,11 @@ div p {
 					</table>
 				</li>
 			</ul>
+			</form>
 			<div class="ui-grid-a" style="max-width: 400px;">
 				<a href="javascript:void(0)" onclick="addMobileNum();"
 					data-theme="f" data-role="button" data-icon="false">添加手机号</a>
+			</div>
 			</div>
 			
 		</div>
